Fixes hack and let's paintpalette resize using flex-wrap to wrap to additional lines when needed.

--- a/src/css/PaintPalette.css
+++ b/src/css/PaintPalette.css
@@ -12,4 +12,5 @@
 .Paint_palette .Items_container .Items_row {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
